syntax = "proto3";

package merkledb;

option java_package = "com.swirlds.merkledb";
option java_multiple_files = true;

message DatabaseMetadata {

  // Tables
  repeated TableMetadata tableMetadata = 11;
}

message TableMetadata {

  // Table ID
  optional uint32 tableId = 1;

  // Table name
  bytes tableName = 2;

  // Table config
  TableConfig tableConfig = 3;
}

message TableConfig {

  // Hash version
  optional uint32 hashVersion = 1;

  // Digest type ID: 0x58ff811b for SHA_384 (default), 0x8fc9497e for SHA_512
  optional uint32 digestTypeId = 2;

  // Deprecated
  optional uint32 keyVersion = 3;

  // Deprecated
  uint64 keySerializerClassId = 4;

  // Deprecated
  optional uint32 valueVersion = 5;

  // Deprecated
  uint64 valueSerializerClassId = 6;

  // Bool
  optional uint32 preferDiskIndicies = 7;

  optional uint64 maxNumberOfKeys = 8;

  optional uint64 hashesRamToDiskThreshold = 9;
}
